--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -44,9 +44,9 @@ Online grocery shopping at Tesco, a large supermarket chain based in the UK, inc
 
 The shelves of large contemporary supermarket are the endpoint of global logistic supply chains, in all their logistical, value-transforming and brand-mediated hypercomplexity (see [@Neilson_2012; @Tsing_2009]).  Groceries imply a planetary geography of agriculture, industry, transport, communication and financialisation animated by flows of labour and capital. Encounters between this hyper-complex commodity-geography and people, even in the familiar confines of a supermarket, are no simple matter, either for shoppers or for supermarket operators such as Tesco. For shoppers, as Daniel Miller has argued [@Miller_2012],  shopping takes place as a negotiation of discrepancies between normative and actual social order (for instance, between ideals of health and commitments to thrift). It can also be seen  as a sacrificial ritual that re-instates social order in various ways. 
 
-The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of these flows, orderings, values and negotiations.  It is an intersectional ordering device that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
+The shopping list, whether written on the back of an envelope, or saved as a list in an online grocery shopping system, lies at the intersection of these logistical flows, infrastructural orderings, cultural values and  lively negotiations.  It is an intersectional ordering device that encapsulates a universe of possible references, and a teeming multitude of propensities with an actual local order (in both senses of that term: an ordering and an imperative). As people shop, either by  trawling along aisles packed with thousands of products, or scrolling down screens or searching for particular brands amidst search results, lists inscribe some kind of order that filters or reduces the excessive propensities, claims, dazzle and distraction of commodities to the practicalities of domestic economy.
 
-Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and increasingly, online shopping recommender systems generate lists that seek to align people to commodities they otherwise might have little relation to (see [@Turow_2015] for an overview).  
+Hand-written shopping lists undoubtedly have ongoing importance and display interestingly mixed ordering practices (see the montage of handwritten shopping lists at [Grocery List](http://www.grocerylist.org)). But online shopping lists take shape at the intersection of web and internet infrastructures, supply chain logistics, individualised practices and *habitus,* and increasingly, the predictive operations of  recommender systems. Just as the aisles and shelves of a supermarket present a densely-woven semiotics of objects competing for visual attention by offering distinctions of taste, thrift, expedience, novelty, indulgence, health and increasingly, online shopping recommender systems generate lists that seek to align people to commodities that they otherwise might have little relation to (see [@Turow_2015] for an overview).  
 
 ```{r random-basket, echo=FALSE, cache=TRUE, fig.cap='Random basket'}
 library(dplyr)
@@ -123,7 +123,7 @@ The main narrative of Patel's presentation concerned a shift from a well-establi
 
 ![Humby, 1984]( figure/2_humby_young_org_1994.png)
 
-While Tesco  succeeded in data-mining its customers using demographic segmentation,  and perhaps became the UK's biggest supermarket with the help of data-mining in the 1990s, the shopping environment  in 2017 is a bit different [@Turow_2017]. It is no longer organised around campaigns involving special offers or redemption of points for demographically segmented loyal customers (DunnHumby made heavy use of UK Census data). It can no longer rely on placement of goods in carefully chosen locations in stores. It needs or at least might want to continuously up-sell and cross-sell to customers who might hardly ever visits the supermarket itself. 
+While Tesco  succeeded in data-mining its customers using demographic segmentation,  and perhaps became the UK's biggest supermarket with the help of data-mining in the 1990s, the shopping environment  in 2017 is markedly different [@Turow_2017]. It is no longer organised around campaigns involving special offers or redemption of points for demographically segmented loyal customers (DunnHumby made heavy use of UK Census data). It can no longer rely on placement of goods in carefully chosen locations in stores. It needs or at least might want to continuously up-sell and cross-sell to customers who might hardly ever visits the supermarket itself. 
 
 How could we characterise the shift from ClubCard data mining to online grocery markets?  If 'Tesco is the clear winner in the online grocery market, in fact it takes almost 50p of every £1 spent on food shopping on the internet' [How SEO helps Tesco to dominate the online grocery market](https://econsultancy.com/blog/64841-how-seo-helps-tesco-to-dominate-the-online-grocery-market)[@Silverwood-Cope_2014], then Tesco itself has undergone some kind of conversion? Patel described her work at DunnHumby as shifting the recommender system from a 'rules-based list' to a 'relevancy model.' The relevancy model changed how the 'Have You Forgotten' list was constructed.   This shift is a typical of broader re-organisation of prediction in which existing data analysis practices are being re-distributed and intensified in particular ways. The shift in models results in a more probabilistic structuring of lists.  The ostensible banality of the 'Have you forgotten?' recommendations betrays micrological signs of a topologically complex predictive infrastructure that constructs alignments between people and things in significant ways. 
 
@@ -212,7 +212,7 @@ ggplot(melted, aes(x = Var2, y = Var1, fill = value)) + geom_tile() +
 
 Since so many people buy milk, the recommendation system might end up always recommending milk products. So the data needs to be 'corrected' by, as Patel reports, removing -- under-sampling -- some of the data for common purchases.   Secondly, even if a recommendation system finds uncommon items that are good recommendations, they should neither be too cheap ('low spend'), nor, as we will see too similar to what the customer has already ordered.
 
-Given this imbalance, distortion and deficit of sensibility in the data, 'thinking of good features' -- ways of traversing the data -- becomes central. For our purposes, the exact details of these features matter less than attending to the way in which propensities become probabilities. The dataset, as we will see, will not be practically treated as 'closed,' as Hansen puts it. Although it undergoes acts of enclosure (for instance, in the transformation of the customer-product matrix into vector space), these acts are not conclusive. 'Thinking of good features' potentially re-opens the dataset and sometimes completely transforms it. This thinking, which I suggest occurs mostly in quite obscure yet central zones of data practice, is highly mixed. It combines experimental techniques, infrastructural dynamics, seasonal and daily temporalities, and above all, an ongoing engagement with probabilities and their fungibilities.
+Given this imbalance, distortion and deficit of sensibility in the data, 'thinking of good features' -- ways of traversing the data -- becomes central. For our purposes, the exact details of these features matter less than attending to the way in which, contrary to Hansen's account of analytic closure,  probabilities become propensities in data practice. The dataset, as we will see, will not be practically treated as 'closed,' as Hansen puts it. Although it undergoes acts of enclosure (for instance, in the transformation of the customer-product matrix into vector space), these acts are not conclusive. 'Thinking of good features' potentially re-opens the dataset and sometimes completely transforms it. This transmogrification, which I suggest occurs mostly in quite obscure yet central zones of data practice, is highly mixed. It combines experimental techniques, infrastructural dynamics, seasonal and daily temporalities, and above all, an ongoing engagement with probabilities and their fungibilities. 
 
 ## Experimental settings: A/B allocation and uplift
 
@@ -220,46 +220,49 @@ Given this imbalance, distortion and deficit of sensibility in the data, 'thinki
 |---|---|
 |Control A|Control B|
 
-The relevancy model was deployed experimentally in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in the table. In the  A/B trial,  an identical shopping list, or even the same person, might receive different recommendations.   The randomised application of the model, drawing on protocols for randomised clinical trials first developed in the 1960s, is widely used in social media platforms and hence in all recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds another layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally. 
+For instance, the predictions of the recommender system themselves are the subject of probabilistic treatment. Patel described the experimental deployment of  the relevancy model experimentally in a random A/B controlled trial on the Tesco website. All customers were  allocated to one of four categories as shown in the table. In the  A/B trial,  an identical shopping list, or even the same person, might receive different recommendations.   The randomised application of the model, drawing on protocols for randomised clinical trials first developed in the 1960s, is widely used in social media platforms and hence in the implementation and observation of the effects of recommender systems.[^238.1] Random allocation of customers to the four categories (Test A, Test B, Control A, Control B) adds a layer of probability to the recommender system in the name of statistical validation of the effects or the 'uplift' of the model.[^122] Ironically,  the effects of a predictive model cannot be known in advance. They can only be observed experimentally. 
 
-[^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operation in its infrastructure. TBA[] 
- 
+[^238.1]: It is difficult to gauge how much. Facebook reports that it has more than 1 million models operating in its infrastructure. [@Dunn_2016] 
 
-It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The lift or uplift refers to conversion events associated with the same groups of people. Effectively is an experiment in inhabiting two different worlds, the randomised control trial  sets up a feedback look between the predictive model, the logistic regression, and the world. Once the experimental uplift methodology is in place, the recommender system can constantly modify the recommendation list in light of subsequent data on the uplift. Predictions, then, are not bound by fixed parameters of the model. 
+It is perhaps significant that this random allocation of customers to control and test groups occurs without any relation to the particular profile or propensities of the customer. It seeks to statistically validate the effects -- the *uplift* -- of the model on  conversion events by allowing the effects of the model on what people do to be measured. The uplift refers to conversion events associated with the same groups of people. Effectively an experiment in inhabiting two different worlds, the randomised control trial  sets up a feedback look between the predictive model (the logistic regression), and the world. 
 
 [^122]: See [@Lo_2002] for an introduction to the construction of experimental set ups for uplift models. Market researchers and data miners seem to have started adopting a statistically grounded experimental predictive practice sometimes around 2000. See for instance [@Almquist_2001]  Response modelling, 'propensity' modelling and uplift modelling all seek to identify associations between 'treatments' or interventions and the 'Responders', the people  affected by the treatment.  
 
 ## Infrastructure: the realtime engine serves 
 
-Much discussion of recent media has highlighted its real-time operation (see [@Kittler_1993; @Virilio_1997; @Hansen_2015; @Bollmer_2016]). Patel's description of the relevancy model infrastructure suggested a different temporal patterning. While raw data from Tesco Online feeds into the model every hour, a recommendation list for each customer is only generated once a week. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive.   
+A second layer of probability affects the operation of the recommender system. Much discussion of recent media has highlighted its real-time operation (see [@Kittler_1993; @Virilio_1997; @Hansen_2015; @Bollmer_2016]). Patel's description of the relevancy model infrastructure sketched a different temporal patterning, suggesting immediacy in relation to shopping, but scheduling and periodicity in relation to the infrastructural operations of the predictive model. While raw data from Tesco Online feeds into the model every hour, a recommendation list for each customer is only generated once a week. Customers only shop online every few days at the most, and in some cases, only every few weeks. To continually update the top 200 recommendations for every customer would be computationally expensive.   
 
-A customer does not see their 200 weekly recommendations. The recommender system generates recommendations, but after 'applying business rules, only five are  shown on the Tesco Online website. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009]. The logistics of running a predictive model affect listing practices.  The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to a predictive model able to generate approximately 200 million relevant recommendations, where 'relevance' depends on a matrix of probabilities of associations between people and things that shifts in time. Like the global supply chain logistics optimised for flow of commodities [@Tsing_2009; @Nielson_2012], `hadoop` and its legion of variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise flows of data at an infrastructural rather than analytic scale. In many respects, the quickly glossed-over infrastructural deployment of DunnHumby's relevancy model is the primary conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one. 
+A customer does not see their 200 weekly recommendations. The recommender system generates recommendations, but after 'applying business rules, only five are  shown on the Tesco Online website. Patel briefly mentioned  specific infrastructural elements such as `hadoop` [@ApacheSoftwareFoundation_2009]. The logistics of running a predictive model affect listing practices.  The possibility of adjusting the recommendations for every customer weekly derives from an infrastructure capable of collecting data, assimilating that data to a predictive model able to generate approximately 200 million relevant recommendations, where 'relevance' depends on a matrix of probabilities of associations between people and things that shifts in time. Like the global supply chain logistics optimised for flow of commodities [@Tsing_2009; @Neilson_2012], `hadoop` and its legion of variants (`mahout`, `spark`, `hive`, `pig`, `yarn`) operationalise flows of data at an infrastructural rather than analytic scale. In many respects, the quickly glossed-over infrastructural deployment of DunnHumby's relevancy model is the primary conversion event: the logistic regression model at the heart of the recommender system is no longer an analytical device but an operational one. 
 
 ## Similarity, substitution, complementarity and micrological propensities
 
-The propensities of things become probabilities in predictive analytics only to the extent that probabilities themselves become propensities. Recommendations are relevant in a recommender system or any other predictive model to the precise extent of their probability. Relevance is closely connected to propensities in the predictive condition. From DunnHumby's standpoint, the relevance of a recommendation relates directly to conversion events. Conversion events happen in the world. They actualise a propensity that hitherto remained either latent or potential. From the standpoint of the ontological conversion between probability and propensity,  prediction stems from the propensities of things, what Hansen describes as the 'complex and diffuse calculus' that only subsequently and provisionally congeals as a conversion event. The 'micrological propensities' of things support the relevance of recommendations. 
+There is more to probabilities in prediction than a simply enclosure and quantification of the surplus of sensibility, the overwhelming variety, differences and noise of the world. I am suggesting, contrary to Hansen, that the propensities of things are enclosed as  probabilities in predictive analytics only to the extent that probabilities themselves become propensities. Recommendations are relevant in a recommender system or any other operational predictive model to the precise extent of their probability. Relevance is closely connected to propensities in the predictive condition. From DunnHumby's standpoint, the relevance of a recommendation relates directly to conversion events. Conversion events happen in the world.  When a recommender system discovers a common coding of human practice, and logistical configurations, with all their value differentiations, they actualise a propensity that hitherto remained potential. From the standpoint of the ontological exchangeability between probability and propensity,  prediction stems from the propensities of things, what Hansen describes as the 'complex and diffuse calculus' that only provisionally congeals as a conversion event. The 'micrological propensities' of things support the relevance of recommendations. 
 
-How does the DunnHumby model deal with the micrological propensities of things? In her presentation, Patel  spent quite a lot of time addressing the problem of 'basket similarity,' the problem that the recommender system might recommend, for good reason, something similar to items already in a customer's basket. The recommender system needs to know, or the statistical model needs to know how things are related to each other so that it does not waste recommendations on overly similar items. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation for an item that complements items in their list. 
+How does the DunnHumby model deal with the exchange and oscillation between propensities and probabilities? In her presentation, Patel  spent much time addressing the problem of 'basket similarity,' the problem that the recommender system might recommend, for good reason, something similar to items already in a customer's basket. The recommender system or statistical model needs to know how things are related to each other so that it does not waste recommendations on overly similar items. A customer might be willing to substitute a similar item for something they have already chosen, but they are more likely to accept a recommendation for an item that complements items in their list. 
 
-Whereas the association rule-based recommender system focused on thing-thing complementarities -- if you buy bread, you might want milk, if you buy beer, you might want diapers -- the substitutions look for micrological propensities that relate to gradations of preference, and variations in time and place.  Micrological propensities in the list relate to a particular time and place, amidst a continuously differentiable pathways between things.
+Whereas the association rule-based recommender system focused on thing-thing complementarities -- if you buy bread, you might want milk, if you buy beer, you might want diapers -- the personal relevance substitutions look for micrological propensities that relate to gradations of preference, and variations in time and place.  Micrological propensities in the list relate to a particular time and place, amidst a continuously differentiable pathways between things.
 
-How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings. Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' might be able to substitute something in that list that is of higher value, either because it is bigger or more expensive: `Mcvitie's Ginger Moments 400g.` What is being modelled here? No longer whether to recommend a product to a customer or not, but whether something could be substitute or complement  what is already in the recommendation list.
+How could the recommender system sense the possible substitutions and complementaries between things for a given customer, especially since a person's sensibilities and susceptibilities concerning groceries might be shaped by wider social groups, orderings and circumstances?  Patel's comments on this were very brief but suggest that the 'Have You Forgotten?' list becomes an increasingly mutable entity, open to many substitutions and intensive re-writings.
 
-Similarly, modelling complementarities between things for a particular person entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella.` How should we understand the effect of complementarity? From the standpoint of selling more things, Patel emphasises that 'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. From the standpoint of a social ordering that identifies people and things as propensities, complementarities suggest another possible outcome. What does it mean for our sense of social order if the relations between things shift in accordance with our experience of the world? At base, there is no ontological transformation here, but an inclusion of some part of the world into the model.  In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, the propensities of things drive down the surplus of sensibility associated with what people want.  
+Like the mention of `hadoop`, what Patel said about substitution and complementarity draws on extensive but relatively well-established data practices in machine learning. She mentioned,  for instance,  a 'design matrix of 14,000 columns' and the use of '`L1 regularization` to drive coefficients down to zero' in a new feature of the model called 'self-learning substitutes,' a model that examines the recommendation list and predicts substitutes and complementarities for 'all products' in the list. The 'self learning substitutes' feature of the relevancy model draws on another data matrix, the product similarity matrix, itself generated from all previous recommendations that have led to conversion events (that is, 'a user clicked as the response'). A customer's recommendation list might already include `Tesco Ginger Nuts 300g.`   The 'self-learning substitution model' seeks to replace list items with similar but higher value items: `Mcvitie's Ginger Moments 400g.` What is being modelled here? No longer whether to recommend a product to a customer or not, but micrological conversions. 
+
+Similarly, modelling complementarities between things for a particular person entails a matrix of comparisons. `Nutella` complements `bananas,` but the converse is not necessarily true since `bananas` need not complement `nutella,` especially if I have nut allergies.  From the standpoint of customer data science, Patel emphasised the operational significance of predicting complementarities:  'complementarity drives conversion.' Bringing the matrix of similarities expressed as numerical associations between products into the model improves the conversion of recommendations into purchases. From the standpoint of a sociological account of social ordering that associate people and things through propensities, complementarities pose a different problem: what does it mean for social order if the relations between things shift in accordance with our experience of the world as rendered in the intricately varying weights of an L1-regularized logistic regression model? In the similarity matrix, shaped by the history of past recommendations and purchases made by this customer, the propensities of things drive down the surplus of sensibility associated with what people want.
 
 ## Conclusion
+ 
+In their mundane intersectional practices of ordering, recommender systems show how  predictive practices affect existing forms of social order in the world. Rather than directly positing an ontological transformation (as Hansen does), or pointing to the erosion of social order (as Turow does), I have explored some of the conversion events associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. Rather than discontinuous changes, the conversion of the recommender system via a relevance model suggests an ongoing problematization of propensities. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of propensities and conditionalities, warping over time. The predictive assemblages connect logistical ensembles to the negotiation, compromises, rituals and local orderings of everyday life.
 
-In their intersection with mundane practices of ordering, recommender systems offer some guidance to the ways that predictive practices affect existing forms of social order in the world. Rather than directly positing an ontological transformation, I have explored some of the practices of conversion associated with a shift from a data-mining rule-based system to a predictive recommender system. The DunnHumby model and the Tesco 'Have You Forgotten?' recommendations present many of the traits of the conversion processes associated with big data. Rather than discontinuous changes, the conversion of the recommender system via a relevance model suggests an ongoing problematization of propensities. We have seen several types of conversion events: ongoing transformation of models and infrastructures, the experimentalisation  of recommendations, and the broader diffusion of a calculus of probabilities into a fibrous weave of propensities and conditionalities, warping over time. The predictive assemblages respond to problems of logistical ensembles more generally.
+I have been suggesting that predictive listing in the form of open-ended recommendation changes social order. It establishes a common coding between machinic and ritual repetition (as exemplified in the shopping list).  It also suggests some ways in which repetition or reiteration  can also participate in changing and emergent order. By understanding the world in terms of propensities, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
 
-I have been suggesting that predictive listing in the form of open-ended recommendation changes social order. It alters the way in which repetition or reiteration, exemplified in the shopping list, can also participate in change and emergent order.   By following Popper in understanding the world in terms of propensities, we have a chance  to engage with contemporary predictive processes in ways that both acknowledge their relentless and exhausting pressure to consume more and retain some chance of inhabiting the world differently. 
+Rather than understanding prediction as the closed form of an ontologically open world ('the propensities of things'), the DunnHumby relevance model, in all its statistical, infrastructural, organisational and banal complexity, suggests that the predictive conversion remains constitutively incomplete. Shopping lists in all their banal yet primary orderings are fertile terrain for prediction because they are incomplete, somewhat open and mutable forms.  The constitutive incompleteness and openness of lists are very closely entangled with ongoing processes of ordering and othering, and at the same time, can accommodate predictive operations.   Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiments in partly open structures.
 
-I diverge from some understandings of predictive practice. Rather than understanding prediction as the closed form of an ontologically open world ('the propensities of things'), the DunnHumby relevance model, in all its statistical, infrastructural, organisational and banal complexity, suggests that predictive conversion remains constitutively incomplete. Predictive practice abounds in propensities. Ironically, shopping lists  exemplify this incompleteness and ineradicable openness of prediction practice.  The constitutive incompleteness and openness of lists are very closely entangled with problems of social order amidst predictive operations. Lists undergoing a 'conversion' experience as they become more probabilistic, but their heterogeneous character as operations caught up in models, infrastructures, experiments, and the flow of commodities means that they can never form a closed set or dataset. The problem of 'constructing good features,' a problem that any predictive model must address, persists as the site of experiment with structures that lack closure. A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion event. 
-
-In their account of the Netflix recommender system, Ted Hallinan and Peter Striphas make the following argument:
+A constitutive openness to new associations, new combinations, new groupings or actors is integral to the conversion events associated with contemporary data practice. In their account of the Netflix recommender system, Ted Hallinan and Peter Striphas make the following argument:
 
 > These systems, and more importantly their algorithms, play a critical role in deciding which articles (or parts thereof) gain admission to the cultural realm, and in what form. Their doing so thus points in the direction of another universe of reference—a court of algorithmic appeal in which objects, ideas, and practices are heard, cross-examined, and judged independently, in part, of human beings [@Hallinan_2014, 13]
 
-The 'universe of reference' includes objects, ideas and practices mingle. Something similar happens to shopping in the Dunnhumby relevance model. In the customer-product association matrix, in the product-product similarity matrix, in the 14,000 variables included in the logistic regression model, a 'universe of reference' takes shape. The shopping list, the commonplace inscription of normative and actual social order, takes on a complex temporal-material structure that mixes prediction, infrastructural constraints, the individual characteristics of list-makers, statistical validations, database architectures and above all the **surplus sensibility** associated with  circulation of commodities. Shopping lists undergoing a **conversion experience** as they become more probabilistic, but the idea that probabilities are the closed form of propensities does not account for the distribution of probabilities in relations between things, between people, between people and things, and between things and people.
+Despite the somewhat troubling reference to 'another universe,' as if Netflix or DunnHumby's recommender systems occupy a different reality, Hallinan and Striphas usefully and aptly highlight how such systems  mingle  objects, ideas and practices.
+
+Something similar happens to shopping in the Dunnhumby relevance model. In the customer-product association matrix, in the product-product similarity matrix, in the 14,000 variables included in the logistic regression model, a 'universe of reference' takes shape. The shopping list, the commonplace inscription of normative and actual social order, takes on a complex temporal-material structure that mixes prediction, infrastructural constraints, the individual characteristics of list-makers, statistical validations, database architectures and above all the surplus sensibility associated with  circulation and consumption of commodities. Shopping lists undergoing a conversion experience as they become more probabilistic, but the idea that probabilities are the closed form of propensities does not account for the distribution of probabilities in relations between things, between people, between people and things, and between things and people.
 
 ## References
 
